--- a/app/gallery.html
+++ b/app/gallery.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Starter"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Блог</title>
+    <title>Галерея</title>
     <link rel="icon" href="images/favicon.png"/><!--build:css css/styles.min.css-->
     <link rel="stylesheet" href="css/libs/aos.css"/>
     <link rel="stylesheet" href="css/libs/slick.css"/>
@@ -105,150 +105,91 @@
               <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
             </svg></a>
           <!--MOBILE LOGO END-->
-          <h2 class="title">Блог</h2>
-          <h3 class="headline">Важная информация со статьями и новостями от angro</h3>
+          <h2 class="title">Галерея</h2>
+          <h3 class="headline">Галерея Жилых комплексов angro</h3>
         </div>
       </div>
     </header>
     <!--HEADER END-->
     <!--CONTENT START-->
-    <section class="blog">
-      <div class="blog-item">
-        <div class="container">
-          <div class="information">
-            <div class="date">01.04.2020 г.</div>
-            <div class="information__headline">Стоимость 1 кв.м в ЖК Остров с 01.04.2020</div>
-            <div class="text">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года</div>
-            <div class="price">
-              <p>Вид квартиры</p>
-              <p>Этаж </p>
-              <p>Стоимость 1 кв.м</p>
-              <p>Однокомнатная</p>
-              <p>2,7,8</p>
-              <p>11500,00 грн</p>
-              <p>Двухкомнатная</p>
-              <p>2,7,8</p>
-              <p>11500,00 грн</p>
-              <p>Однокомнатная</p>
-              <p>3-6</p>
-              <p>12000,00 грн</p>
-              <p>Двухкомнатная</p>
-              <p>3-6</p>
-              <p>12000,00 грн</p>
-              <p>Трехкомнатная</p>
-              <p>9-9+</p>
-              <p>10000,00 грн</p>
-              <p>Четырехкомнатная</p>
-              <p>9-9+</p>
-              <p>10000,00 грн</p>
+    <section class="gallery-list">
+      <div class="container">
+        <!-- OBJECT START-->
+        <div class="gallery-list__item">
+          <div class="logo">
+            <svg>
+              <use xlink:href="images/main-page_icons-sprite.svg#logo-head"></use>
+            </svg>
+            <p class="logo__text">жилой комплекс</p>
+            <h2 class="logo__title">На Сенной</h2>
+            <h4 class="logo__headline">Полтава ул. Сенная, 19</h4><a class="link" href="href">Смотреть фото </a>
+          </div>
+          <div class="picture"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
+            <div class="picture__icon-wrap">
+              <svg class="icon">
+                <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
+              </svg>
             </div>
           </div>
-          <div class="photo"><img class="img" src="images/objects/object_img4.jpg" alt="ЖК 'На Сенной'"/></div>
-          <div class="information__btn"><a class="arrow-btn arrow-btn--left" href="arcticle.html">
-              <div class="arrow-btn__icon">
-                <svg class="icon">
-                  <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                </svg>
-              </div>
-              <p class="arrow-btn__text">Подробнее</p></a></div>
         </div>
-      </div>
-      <div class="blog-item">
-        <div class="container">
-          <div class="information">
-            <div class="date">16.10.2019 г.</div>
-            <div class="information__headline">Стоимость 1 кв.м в ЖК Остров (ноябрь 2019)</div>
-            <div class="text">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 ноября 2019 года</div>
-            <div class="price">
-              <p>Вид квартиры</p>
-              <p>Этаж </p>
-              <p>Стоимость 1 кв.м</p>
-              <p>Однокомнатная</p>
-              <p>2,7,8</p>
-              <p>11500,00 грн</p>
-              <p>Двухкомнатная</p>
-              <p>2,7,8</p>
-              <p>11500,00 грн</p>
-              <p>Однокомнатная</p>
-              <p>3-6</p>
-              <p>12000,00 грн</p>
-              <p>Двухкомнатная</p>
-              <p>3-6</p>
-              <p>12000,00 грн</p>
-              <p>Трехкомнатная</p>
-              <p>9-9+</p>
-              <p>10000,00 грн</p>
-              <p>Четырехкомнатная</p>
-              <p>9-9+</p>
-              <p>10000,00 грн</p>
+        <!-- OBJECT END-->
+        <!-- OBJECT START-->
+        <div class="gallery-list__item">
+          <div class="logo">
+            <svg>
+              <use xlink:href="images/main-page_icons-sprite.svg#logo-head"></use>
+            </svg>
+            <p class="logo__text">жилой комплекс</p>
+            <h2 class="logo__title">Остров</h2>
+            <h4 class="logo__headline">Миргород ул. Гоголя, 77</h4><a class="link" href="href">Смотреть фото </a>
+          </div>
+          <div class="picture"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
+            <div class="picture__icon-wrap">
+              <svg class="icon">
+                <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
+              </svg>
             </div>
           </div>
-          <div class="photo"><img class="img" src="images/objects/object_img4.jpg" alt="ЖК 'На Сенной'"/></div>
-          <div class="information__btn"><a class="arrow-btn arrow-btn--left" href="arcticle.html">
-              <div class="arrow-btn__icon">
-                <svg class="icon">
-                  <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                </svg>
-              </div>
-              <p class="arrow-btn__text">Подробнее</p></a></div>
         </div>
-      </div>
-      <div class="blog-item">
-        <div class="container">
-          <div class="information">
-            <div class="date">22.12.2018 г.</div>
-            <div class="information__headline">Надежный фундамент — залог комфортной жизни</div>
-            <div class="text">Строительство жилых домов сопряжено со множеством проблем. Но если безопасность надземной части зданий связана с качеством материалов и человеческим фактором, то подземная их часть подвергается гораздо большему числу рисков.</div>
+        <!-- OBJECT END-->
+        <!-- OBJECT START-->
+        <div class="gallery-list__item">
+          <div class="logo">
+            <svg>
+              <use xlink:href="images/main-page_icons-sprite.svg#logo-head"></use>
+            </svg>
+            <p class="logo__text">жилой комплекс</p>
+            <h2 class="logo__title">Мирного</h2>
+            <h4 class="logo__headline">Миргород ул. Панаса Мирного, 3</h4><a class="link" href="href">Смотреть фото </a>
           </div>
-          <div class="photo"><img class="img" src="images/blog/dock.jpg" alt="Документ'"/></div>
-          <div class="information__btn"><a class="arrow-btn arrow-btn--left" href="#">
-              <div class="arrow-btn__icon">
-                <svg class="icon">
-                  <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                </svg>
-              </div>
-              <p class="arrow-btn__text">Подробнее</p></a></div>
-        </div>
-      </div>
-      <div class="blog-item">
-        <div class="container">
-          <div class="information">
-            <div class="date">03.12.2018 г.</div>
-            <div class="information__headline">Стоимость 1 кв.м в ЖК Остров (декабрь 2018)</div>
-            <div class="text">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 10 декабря 2018 года</div>
-            <div class="price">
-              <p>Вид квартиры</p>
-              <p>Этаж </p>
-              <p>Стоимость 1 кв.м</p>
-              <p>Однокомнатная</p>
-              <p>2,7,8</p>
-              <p>11500,00 грн</p>
-              <p>Двухкомнатная</p>
-              <p>2,7,8</p>
-              <p>11500,00 грн</p>
-              <p>Однокомнатная</p>
-              <p>3-6</p>
-              <p>12000,00 грн</p>
-              <p>Двухкомнатная</p>
-              <p>3-6</p>
-              <p>12000,00 грн</p>
-              <p>Трехкомнатная</p>
-              <p>9-9+</p>
-              <p>10000,00 грн</p>
-              <p>Четырехкомнатная</p>
-              <p>9-9+</p>
-              <p>10000,00 грн</p>
+          <div class="picture"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
+            <div class="picture__icon-wrap">
+              <svg class="icon">
+                <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
+              </svg>
             </div>
           </div>
-          <div class="photo"><img class="img" src="images/objects/object_img4.jpg" alt="ЖК 'На Сенной'"/></div>
-          <div class="information__btn"><a class="arrow-btn arrow-btn--left" href="arcticle.html">
-              <div class="arrow-btn__icon">
-                <svg class="icon">
-                  <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                </svg>
-              </div>
-              <p class="arrow-btn__text">Подробнее</p></a></div>
         </div>
+        <!-- OBJECT END-->
+        <!-- OBJECT START-->
+        <div class="gallery-list__item">
+          <div class="logo">
+            <svg>
+              <use xlink:href="images/main-page_icons-sprite.svg#logo-head"></use>
+            </svg>
+            <p class="logo__text">жилой комплекс</p>
+            <h2 class="logo__title">Победы</h2>
+            <h4 class="logo__headline">Миргород ул. Победы, 10</h4><a class="link" href="href">Смотреть фото </a>
+          </div>
+          <div class="picture"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
+            <div class="picture__icon-wrap">
+              <svg class="icon">
+                <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+        <!-- OBJECT END-->
       </div>
     </section>
     <!--CONTENT END-->
