--- a/app/object.html
+++ b/app/object.html
@@ -56,7 +56,7 @@
         <li class="menu-item"><a class="link--active" href="index.html">Главная</a></li>
         <li class="menu-item"><a href="object.html">Объекты</a></li>
         <li class="menu-item"><a href="#">Квартиры</a></li>
-        <li class="menu-item"><a href="#">Галерея</a></li>
+        <li class="menu-item"><a href="gallery.html">Галерея</a></li>
         <li class="menu-item"><a href="blog.html">Блог</a></li>
       </ul>
       <!--MOBILE LANG-->
