add slider on page blog opened;

--- a/app/object-opened.html
+++ b/app/object-opened.html
@@ -315,12 +315,24 @@
         </div>
       </div>
     </section>
-    <section class="galery">
+    <section class="galery-section">
       <div class="container">
         <div class="content-galery grid">
           <div class="content-headline">
-            <h3 class="content-headline__text">Этапы строительства               </h3>
+            <h3 class="content-headline__text">Этапы строительства</h3>
           </div>
+        </div>
+        <div class="object-opened-slider">
+          <!--SLIDER TILE-->
+          <div class="object-opened__tile"><img src="images/object/IMG_1.jpg"/></div>
+          <!--SLIDER TILE-->
+          <div class="object-opened__tile"><img src="images/object/IMG_2.jpg"/></div>
+          <!--SLIDER TILE-->
+          <div class="object-opened__tile"><img src="images/object/IMG_3.jpg"/></div>
+          <!--SLIDER TILE-->
+          <div class="object-opened__tile"><img src="images/object/IMG_1.jpg"/></div>
+          <!--SLIDER TILE-->
+          <div class="object-opened__tile"><img src="images/object/IMG_2.jpg"/></div>
         </div>
       </div>
     </section>
@@ -472,6 +484,7 @@
 <!--build:js js/main.min.js -->
     <script src="js/libs/jquery.min.js"></script>
     <script src="js/libs/jquery-ui.js"></script>
+    <script src="js/libs/lightgallery.js"></script>
     <script src="js/libs/aos.js"></script>
     <script src="js/libs/slick.min.js"></script>
     <script src="js/main.js"></script><!--endbuild-->
