--- a/app/index.html
+++ b/app/index.html
@@ -648,6 +648,7 @@
 <!--build:js js/main.min.js -->
     <script src="js/libs/jquery.min.js"></script>
     <script src="js/libs/jquery-ui.js"></script>
+    <script src="js/libs/lightgallery.js"></script>
     <script src="js/libs/aos.js"></script>
     <script src="js/libs/slick.min.js"></script>
     <script src="js/main.js"></script><!--endbuild-->
