--- a/app/gallery.html
+++ b/app/gallery.html
@@ -28,7 +28,7 @@
     <!--SIDEBAR-->
     <div class="sidebar">
       <div class="sidebar-content">
-        <!-- LOGO START  --><a class="sidebar-logo" href="#">             
+        <!-- LOGO START  --><a class="sidebar-logo" href="index.html">             
           <svg class="sidebar-logo__icon">
             <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
           </svg></a>
@@ -55,7 +55,7 @@
       <ul class="menu-top">     
         <li class="menu-item"><a class="link--active" href="index.html">Главная</a></li>
         <li class="menu-item"><a href="object.html">Объекты</a></li>
-        <li class="menu-item"><a href="#">Квартиры</a></li>
+        <li class="menu-item"><a href="apartments.html">Квартиры</a></li>
         <li class="menu-item"><a href="gallery.html">Галерея</a></li>
         <li class="menu-item"><a href="blog.html">Блог</a></li>
       </ul>
@@ -122,7 +122,7 @@
             </svg>
             <p class="logo__text">жилой комплекс</p>
             <h2 class="logo__title">На Сенной</h2>
-            <h4 class="logo__headline">Полтава ул. Сенная, 19</h4><a class="link" href="href">Смотреть фото </a>
+            <h4 class="logo__headline">Полтава ул. Сенная, 19</h4><a class="link" href="gallery-opened.html">Смотреть фото </a>
           </div>
           <div class="picture"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
             <div class="picture__icon-wrap">
@@ -141,7 +141,7 @@
             </svg>
             <p class="logo__text">жилой комплекс</p>
             <h2 class="logo__title">Остров</h2>
-            <h4 class="logo__headline">Миргород ул. Гоголя, 77</h4><a class="link" href="href">Смотреть фото </a>
+            <h4 class="logo__headline">Миргород ул. Гоголя, 77</h4><a class="link" href="gallery-opened.html">Смотреть фото </a>
           </div>
           <div class="picture"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
             <div class="picture__icon-wrap">
@@ -160,7 +160,7 @@
             </svg>
             <p class="logo__text">жилой комплекс</p>
             <h2 class="logo__title">Мирного</h2>
-            <h4 class="logo__headline">Миргород ул. Панаса Мирного, 3</h4><a class="link" href="href">Смотреть фото </a>
+            <h4 class="logo__headline">Миргород ул. Панаса Мирного, 3</h4><a class="link" href="gallery-opened.html">Смотреть фото </a>
           </div>
           <div class="picture"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
             <div class="picture__icon-wrap">
@@ -179,7 +179,7 @@
             </svg>
             <p class="logo__text">жилой комплекс</p>
             <h2 class="logo__title">Победы</h2>
-            <h4 class="logo__headline">Миргород ул. Победы, 10</h4><a class="link" href="href">Смотреть фото </a>
+            <h4 class="logo__headline">Миргород ул. Победы, 10</h4><a class="link" href="gallery-opened.html">Смотреть фото </a>
           </div>
           <div class="picture"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
             <div class="picture__icon-wrap">
