--- a/app/gallery-opened copy.html
+++ b/app/gallery-opened copy.html
@@ -5,16 +5,17 @@
     <meta name="description" content="Starter"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Angro</title>
+    <title>Галерея</title>
     <link rel="icon" href="images/favicon.png"/><!--build:css css/styles.min.css-->
     <link rel="stylesheet" href="css/libs/aos.css"/>
     <link rel="stylesheet" href="css/libs/slick.css"/>
     <link rel="stylesheet" href="css/libs/slick-theme.css"/>
+    <link rel="stylesheet" href="css/libs/lightgallery.css"/>
     <link rel="stylesheet" href="css/global.min.css"/><!--endbuild-->
 <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   </head>
-  <body class="arcticle-body">
+  <body class="gallery-opened-body">
     <!--INFO START -->
     <div class="object-info">
       <div class="object-info__icon">
@@ -28,7 +29,7 @@
     <!--SIDEBAR-->
     <div class="sidebar">
       <div class="sidebar-content">
-        <!-- LOGO START  --><a class="sidebar-logo" href="index.html">             
+        <!-- LOGO START  --><a class="sidebar-logo" href="#">             
           <svg class="sidebar-logo__icon">
             <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
           </svg></a>
@@ -55,7 +56,7 @@
       <ul class="menu-top">     
         <li class="menu-item"><a class="link--active" href="index.html">Главная</a></li>
         <li class="menu-item"><a href="object.html">Объекты</a></li>
-        <li class="menu-item"><a href="apartments.html">Квартиры</a></li>
+        <li class="menu-item"><a href="#">Квартиры</a></li>
         <li class="menu-item"><a href="gallery.html">Галерея</a></li>
         <li class="menu-item"><a href="blog.html">Блог</a></li>
       </ul>
@@ -97,7 +98,7 @@
     </div>
     <!--SIDEBAR END-->
     <!--HEADER START -->
-    <header class="article-header">
+    <header class="gallery-opened-header">
       <div class="container">
         <div class="grid">
           <!--MOBILE LOGO--><a class="mobile-logo" href="#">             
@@ -105,8 +106,8 @@
               <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
             </svg></a>
           <!--MOBILE LOGO END-->
-          <h2 class="title">Статья</h2>
-          <!--h3.headline Важная информация со статьями и новостями от angro--><a class="arrow-btn arrow-btn--left" href="#">
+          <h2 class="title">галерея ЖК “На сенной”</h2>
+          <!--h3.headline Галерея Жилых комплексов angro--><a class="arrow-btn arrow-btn--left" href="#">
             <div class="arrow-btn__icon">
               <svg class="icon">
                 <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
@@ -118,58 +119,9 @@
     </header>
     <!--HEADER END-->
     <!--CONTENT START-->
-    <section class="article-content">
+    <section class="gallery-opened-content">
       <div class="container">
-        <div class="information">
-          <p class="date">01.04.2020 г.</p>
-          <p class="information__headline">Стоимость 1 кв.м в ЖК Остров с 01.04.2020</p>
-          <div class="text"><img class="float-right img" src="images/article/article-image1.jpg" alt="ЖК 'На Сенной'"/>
-            <p class="text__headlide">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года
-              <div class="price">
-                <p>Вид квартиры</p>
-                <p>Этаж </p>
-                <p>Стоимость 1 кв.м</p>
-                <p>Однокомнатная</p>
-                <p>2,7,8</p>
-                <p>11500,00 грн</p>
-                <p>Двухкомнатная</p>
-                <p>2,7,8</p>
-                <p>11500,00 грн</p>
-                <p>Однокомнатная</p>
-                <p>3-6</p>
-                <p>12000,00 грн</p>
-                <p>Двухкомнатная</p>
-                <p>3-6</p>
-                <p>12000,00 грн</p>
-                <p>Трехкомнатная</p>
-                <p>9-9+</p>
-                <p>10000,00 грн</p>
-                <p>Четырехкомнатная</p>
-                <p>9-9+</p>
-                <p>10000,00 грн</p>
-              </div>
-            </p>
-            <div class="text__main"> 
-              <p>Строительство жилых домов сопряжено со множеством проблем. Но если безопасность надземной части зданий связана с качеством материалов и человеческим фактором, то подземная их часть подвергается гораздо большему числу рисков. </p>
-              <p>Просчитать и предвидеть их все не способен самый мощный компьютер. Поэтому проектирование фундаментов является, пожалуй, самым сложным и ответственным моментом в процессе строительства. От успешного проведения начального этапа работ зависит вся дальнейшая судьба дома и зданий, расположенных по соседству.</p>
-              <p>Застройщик Жилого комплекса «ОСТРОВ» с полной ответственностью подошел к вопросам проектирования и возведения жилого дома, а особенно к фундаменту, так как рассказы об особенностях строительства соседнего жилого дома по адресу ул. Гоголя, 47/2 ходят по Миргороду с момента возведения этого здания в 80-х годах прошлого века.    </p><img class="float-left img" src="images/article/article-image2.jpg" alt="ЖК 'На Сенной'"/>
-              <p>Для оценки фактической ситуации с почвой на месте планируемого строительства в апреле 2017 года были проведены инженерно-геологические изыскания Полтавским филиалом Украинского государственного главного научно-исследовательского и производственного института инженерно-технических и экологических изысканий (ПФ ДП «УКРНДІІНТВ») с бурением и изъятием образцов. По результатам были определены геологические условия на строительном участке.</p>
-              <ol>
-                <li>Данные исследования стали основой для проекта фундаментов разработанного главным архитектором проекта Зайцем С.П., который соответствует всем строительным нормам и стандартам.</li>
-                <li>Строительство фундамента было поручено компании «Фундаментспецбуд» основанной в 1990 году. Начиная с этого времени</li>
-              </ol>
-              <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.</p><img class="float-right img" src="images/article/article-image3.jpg" alt="ЖК 'На Сенной'"/>
-              <ul>
-                <li>Сначала <strong>«Фундаментспецбуд»</strong> провел статические испытания почвы несколькими железобетонными сваями в разных местах строительного участка, которые подтвердили правильность расчетов и выполнил весь проект в полном объеме без отклонений.</li>
-                <li>Работая более 20-лет на строительном рынке, компания сформировала самодостаточную производственно техническую базу и накопила широкий производственный опыт. <strong>«Фундаментспецбуд»</strong> выполнил более 1000 проектов на территории Украины и за ее пределами.</li>
-              </ul>
-              <p>Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.</p>
-              <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.                  </p>
-              <p>Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.</p>
-              <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.</p>
-            </div>
-          </div>
-        </div>
+        <div id="lightgallery"><a class="lightgallery__item" href="images/gallery/IMG_1.jpg"><img class="img-responsive" src="images/gallery/IMG_1.jpg"/></a><a class="lightgallery__item" href="images/gallery/IMG_2.jpg"><img class="img-responsive" src="images/gallery/IMG_2.jpg"/></a><a class="lightgallery__item" href="images/gallery/IMG_3.jpg"><img class="img-responsive" src="images/gallery/IMG_3.jpg"/></a><a class="lightgallery__item" href="images/gallery/IMG_4.jpg"><img class="img-responsive" src="images/gallery/IMG_4.jpg"/></a><a class="lightgallery__item" href="images/gallery/IMG_5.jpg"><img class="img-responsive" src="images/gallery/IMG_5.jpg"/></a><a class="lightgallery__item" href="images/gallery/IMG_6.jpg"><img class="img-responsive" src="images/gallery/IMG_6.jpg"/></a><a class="lightgallery__item" href="images/gallery/IMG_7.jpg"><img class="img-responsive" src="images/gallery/IMG_7.jpg"/></a><a class="lightgallery__item" href="images/gallery/IMG_8.jpg"><img class="img-responsive" src="images/gallery/IMG_8.jpg"/></a><a class="lightgallery__item" href="images/gallery/IMG_9.jpg"><img class="img-responsive" src="images/gallery/IMG_9.jpg"/></a><a class="lightgallery__item" href="images/gallery/IMG_10.jpg"><img class="img-responsive" src="images/gallery/IMG_10.jpg"/></a></div>
       </div>
     </section>
     <!--CONTENT END-->
