--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
     <!--SIDEBAR-->
     <div class="sidebar">
       <div class="sidebar-content">
-        <!-- LOGO START  --><a class="sidebar-logo" href="#">             
+        <!-- LOGO START  --><a class="sidebar-logo" href="index.html">             
           <svg class="sidebar-logo__icon">
             <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
           </svg></a>
@@ -56,7 +56,7 @@
       <ul class="menu-top">     
         <li class="menu-item"><a class="link--active" href="index.html">Главная</a></li>
         <li class="menu-item"><a href="object.html">Объекты</a></li>
-        <li class="menu-item"><a href="#">Квартиры</a></li>
+        <li class="menu-item"><a href="apartments.html">Квартиры</a></li>
         <li class="menu-item"><a href="gallery.html">Галерея</a></li>
         <li class="menu-item"><a href="blog.html">Блог</a></li>
       </ul>
