fix for article page;

--- a/app/index.html
+++ b/app/index.html
@@ -40,13 +40,13 @@
         <div class="sidebar-menu">
           <div class="sidebar-menu__triger">Меню</div>
         </div>
-        <div class="sidebar-icons"><a class="sidebar-icons__item" href="#">
+        <div class="sidebar-icons"><a class="sidebar-icons__item" href="apartments.html">
             <svg class="sidebar-icons__icon">
               <use xlink:href="images/main-page_icons-sprite.svg#apartament"></use>
-            </svg></a><a class="sidebar-icons__item" href="#">
+            </svg></a><a class="sidebar-icons__item" href="tel:+380509915880">
             <svg class="sidebar-icons__icon icon--phone">
               <use xlink:href="images/main-page_icons-sprite.svg#phone"></use>
-            </svg></a><a class="sidebar-icons__item" href="#">
+            </svg></a><a class="sidebar-icons__item" href="mailto:angrobud@gmail.com">
             <svg class="sidebar-icons__icon icon--email">
               <use xlink:href="images/main-page_icons-sprite.svg#email"></use>
             </svg></a></div>
@@ -87,7 +87,7 @@
       </div>
       <ul class="menu-footer">
         <li class="menu-item"><a class="link--active" href="#">Выбрать квартиру</a></li>
-        <li class="menu-item"><a href="tel:+38(050)-991-58-80">+38 (050) 991 58 80</a></li>
+        <li class="menu-item"><a href="tel:+380509915880">+38 (050) 991 58 80</a></li>
         <li class="menu-item"><a class="link--email" href="mailto:angrobud@gmail.com">angrobud@gmail.com</a></li>
       </ul>
     </div>
@@ -453,7 +453,7 @@
                   <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
                 </svg>
               </div>
-              <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a>
+              <p class="arrow-btn__text">Посмотреть все Статьи</p></a>
           </div>
         </div>
       </div>
@@ -471,7 +471,7 @@
                 <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
               </svg>
             </div>
-            <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a>
+            <p class="arrow-btn__text">Выбрать квартиру </p></a>
         </div>
       </div>
       <!--SLIDER BUTTON START-->
@@ -566,7 +566,8 @@
       <div class="container">
         <div class="grid">
           <div class="footer-address">
-            <h5 class="footer-address__title">Наши офисы</h5><a class="footer-link" href="#">г.Полтава, ул. А.Кукоби, 12</a><a class="footer-link" href="#">г.Миргород, ул.Победы,10, оф.1</a><a class="footer-link" href="#">Время работы: 9:00 – 18:00</a>
+            <h5 class="footer-address__title">Наши офисы</h5><a class="footer-link" href="https://goo.gl/maps/uvTuZejuJ91FQi488">г.Полтава, ул. А.Кукоби, 12</a><a class="footer-link" href="https://goo.gl/maps/A4DGXzHAsAgAp9nc7">г.Миргород, ул.Победы,10, оф.1</a>
+            <p>Время работы: 9:00 – 18:00</p>
           </div>
           <div class="footer-logo"><a class="link" href="#"> 
               <svg>
@@ -611,7 +612,7 @@
                   </svg>
                 </div></a></div>
           </div>
-          <p class="footer-copyright">© 2020. www.angro.com.ua</p>
+          <p class="footer-copyright">© 2020. <a class="footer-link" href="www.angro.com.ua">www.angro.com.ua</a></p>
         </div>
       </div>
     </footer>
