--- a/app/object/object-modal.html
+++ b/app/object/object-modal.html
@@ -5,29 +5,43 @@
       <div class="date">01.04.2020 г.</div>
       <div class="information__headline">Стоимость 1 кв.м в ЖК Остров с 01.04.2020</div>
       <div class="text">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года</div>
-      <div class="price">
-        <p class="price__head">Вид квартиры</p>
-        <p class="price__head">Этаж </p>
-        <p class="price__head">Стоимость 1 кв.м</p>
-        <p class="price__item">Однокомнатная</p>
-        <p class="price__item">2,7,8</p>
-        <p class="price__item">11500,00 грн</p>
-        <p class="price__item">Двухкомнатная</p>
-        <p class="price__item">2,7,8</p>
-        <p class="price__item">11500,00 грн</p>
-        <p class="price__item">Однокомнатная</p>
-        <p class="price__item">3-6</p>
-        <p class="price__item">12000,00 грн</p>
-        <p class="price__item">Двухкомнатная</p>
-        <p class="price__item">3-6</p>
-        <p class="price__item">12000,00 грн</p>
-        <p class="price__item">Трехкомнатная</p>
-        <p class="price__item">9-9+</p>
-        <p class="price__item">10000,00 грн</p>
-        <p class="price__item">Четырехкомнатная</p>
-        <p class="price__item">9-9+</p>
-        <p class="price__item">10000,00 грн</p>
-      </div>
+      <table class="price">
+        <tr>
+          <th>Вид квартиры</th>
+          <th>Этаж </th>
+          <th>Стоимость 1 кв.м</th>
+        </tr>
+        <tr>
+          <td>Однокомнатная</td>
+          <td>2,7,8</td>
+          <td>11500,00 грн</td>
+        </tr>
+        <tr>
+          <td>Двухкомнатная</td>
+          <td>2,7,8</td>
+          <td>11500,00 грн</td>
+        </tr>
+        <tr>
+          <td>Однокомнатная</td>
+          <td>3-6</td>
+          <td>12000,00 грн</td>
+        </tr>
+        <tr>
+          <td>Двухкомнатная</td>
+          <td>3-6</td>
+          <td>12000,00 грн</td>
+        </tr>
+        <tr>
+          <td>Трехкомнатная</td>
+          <td>9-9+</td>
+          <td>10000,00 грн</td>
+        </tr>
+        <tr>
+          <td>Четырехкомнатная</td>
+          <td>9-9+</td>
+          <td>10000,00 грн</td>
+        </tr>
+      </table>
     </div>
     <div class="photo"><img class="img" src="images/objects/object_img4.jpg" alt="ЖК 'На Сенной'"/></div>
     <div class="object-modal__btn"><a class="arrow-btn arrow-btn--left" href="#">
