--- a/app/arcticle.html
+++ b/app/arcticle.html
@@ -39,13 +39,13 @@
         <div class="sidebar-menu">
           <div class="sidebar-menu__triger">Меню</div>
         </div>
-        <div class="sidebar-icons"><a class="sidebar-icons__item" href="#">
+        <div class="sidebar-icons"><a class="sidebar-icons__item" href="apartments.html">
             <svg class="sidebar-icons__icon">
               <use xlink:href="images/main-page_icons-sprite.svg#apartament"></use>
-            </svg></a><a class="sidebar-icons__item" href="#">
+            </svg></a><a class="sidebar-icons__item" href="tel:+380509915880">
             <svg class="sidebar-icons__icon icon--phone">
               <use xlink:href="images/main-page_icons-sprite.svg#phone"></use>
-            </svg></a><a class="sidebar-icons__item" href="#">
+            </svg></a><a class="sidebar-icons__item" href="mailto:angrobud@gmail.com">
             <svg class="sidebar-icons__icon icon--email">
               <use xlink:href="images/main-page_icons-sprite.svg#email"></use>
             </svg></a></div>
@@ -86,7 +86,7 @@
       </div>
       <ul class="menu-footer">
         <li class="menu-item"><a class="link--active" href="#">Выбрать квартиру</a></li>
-        <li class="menu-item"><a href="tel:+38(050)-991-58-80">+38 (050) 991 58 80</a></li>
+        <li class="menu-item"><a href="tel:+380509915880">+38 (050) 991 58 80</a></li>
         <li class="menu-item"><a class="link--email" href="mailto:angrobud@gmail.com">angrobud@gmail.com</a></li>
       </ul>
     </div>
@@ -121,54 +121,63 @@
     <section class="article-content">
       <div class="container">
         <div class="information">
-          <p class="date">01.04.2020 г.</p>
-          <p class="information__headline">Стоимость 1 кв.м в ЖК Остров с 01.04.2020</p>
-          <div class="text"><img class="float-right img" src="images/article/article-image1.jpg" alt="ЖК 'На Сенной'"/>
-            <p class="text__headlide">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года
-              <div class="price">
-                <p>Вид квартиры</p>
-                <p>Этаж </p>
-                <p>Стоимость 1 кв.м</p>
-                <p>Однокомнатная</p>
-                <p>2,7,8</p>
-                <p>11500,00 грн</p>
-                <p>Двухкомнатная</p>
-                <p>2,7,8</p>
-                <p>11500,00 грн</p>
-                <p>Однокомнатная</p>
-                <p>3-6</p>
-                <p>12000,00 грн</p>
-                <p>Двухкомнатная</p>
-                <p>3-6</p>
-                <p>12000,00 грн</p>
-                <p>Трехкомнатная</p>
-                <p>9-9+</p>
-                <p>10000,00 грн</p>
-                <p>Четырехкомнатная</p>
-                <p>9-9+</p>
-                <p>10000,00 грн</p>
-              </div>
-            </p>
-            <div class="text__main"> 
-              <p>Строительство жилых домов сопряжено со множеством проблем. Но если безопасность надземной части зданий связана с качеством материалов и человеческим фактором, то подземная их часть подвергается гораздо большему числу рисков. </p>
-              <p>Просчитать и предвидеть их все не способен самый мощный компьютер. Поэтому проектирование фундаментов является, пожалуй, самым сложным и ответственным моментом в процессе строительства. От успешного проведения начального этапа работ зависит вся дальнейшая судьба дома и зданий, расположенных по соседству.</p>
-              <p>Застройщик Жилого комплекса «ОСТРОВ» с полной ответственностью подошел к вопросам проектирования и возведения жилого дома, а особенно к фундаменту, так как рассказы об особенностях строительства соседнего жилого дома по адресу ул. Гоголя, 47/2 ходят по Миргороду с момента возведения этого здания в 80-х годах прошлого века.    </p><img class="float-left img" src="images/article/article-image2.jpg" alt="ЖК 'На Сенной'"/>
-              <p>Для оценки фактической ситуации с почвой на месте планируемого строительства в апреле 2017 года были проведены инженерно-геологические изыскания Полтавским филиалом Украинского государственного главного научно-исследовательского и производственного института инженерно-технических и экологических изысканий (ПФ ДП «УКРНДІІНТВ») с бурением и изъятием образцов. По результатам были определены геологические условия на строительном участке.</p>
-              <ol>
-                <li>Данные исследования стали основой для проекта фундаментов разработанного главным архитектором проекта Зайцем С.П., который соответствует всем строительным нормам и стандартам.</li>
-                <li>Строительство фундамента было поручено компании «Фундаментспецбуд» основанной в 1990 году. Начиная с этого времени</li>
-              </ol>
-              <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.</p><img class="float-right img" src="images/article/article-image3.jpg" alt="ЖК 'На Сенной'"/>
-              <ul>
-                <li>Сначала <strong>«Фундаментспецбуд»</strong> провел статические испытания почвы несколькими железобетонными сваями в разных местах строительного участка, которые подтвердили правильность расчетов и выполнил весь проект в полном объеме без отклонений.</li>
-                <li>Работая более 20-лет на строительном рынке, компания сформировала самодостаточную производственно техническую базу и накопила широкий производственный опыт. <strong>«Фундаментспецбуд»</strong> выполнил более 1000 проектов на территории Украины и за ее пределами.</li>
-              </ul>
-              <p>Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.</p>
-              <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.                  </p>
-              <p>Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.</p>
-              <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.</p>
-            </div>
-          </div>
+          <h3 class="date">01.04.2020 г.</h3>
+          <h1 class="information__headline">Стоимость 1 кв.м в ЖК Остров с 01.04.2020</h1><img class="img float-right" src="images/article/article-image1.jpg" alt="ЖК 'На Сенной'"/>
+          <h2 class="text__headlide">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года</h2>
+          <table class="price">
+            <tr>
+              <th>Вид квартиры</th>
+              <th>Этаж </th>
+              <th>Стоимость 1 кв.м</th>
+            </tr>
+            <tr>
+              <td>Однокомнатная</td>
+              <td>2,7,8</td>
+              <td>11500,00 грн</td>
+            </tr>
+            <tr>
+              <td>Двухкомнатная</td>
+              <td>2,7,8</td>
+              <td>11500,00 грн</td>
+            </tr>
+            <tr>
+              <td>Однокомнатная</td>
+              <td>3-6</td>
+              <td>12000,00 грн</td>
+            </tr>
+            <tr>
+              <td>Двухкомнатная</td>
+              <td>3-6</td>
+              <td>12000,00 грн</td>
+            </tr>
+            <tr>
+              <td>Трехкомнатная</td>
+              <td>9-9+</td>
+              <td>10000,00 грн</td>
+            </tr>
+            <tr>
+              <td>Четырехкомнатная</td>
+              <td>9-9+</td>
+              <td>10000,00 грн</td>
+            </tr>
+          </table>
+          <p>Строительство жилых домов сопряжено со множеством проблем. Но если безопасность надземной части зданий связана с качеством материалов и человеческим фактором, то подземная их часть подвергается гораздо большему числу рисков. </p>
+          <p>Просчитать и предвидеть их все не способен самый мощный компьютер. Поэтому проектирование фундаментов является, пожалуй, самым сложным и ответственным моментом в процессе строительства. От успешного проведения начального этапа работ зависит вся дальнейшая судьба дома и зданий, расположенных по соседству.</p>
+          <p>Застройщик Жилого комплекса «ОСТРОВ» с полной ответственностью подошел к вопросам проектирования и возведения жилого дома, а особенно к фундаменту, так как рассказы об особенностях строительства соседнего жилого дома по адресу ул. Гоголя, 47/2 ходят по Миргороду с момента возведения этого здания в 80-х годах прошлого века.    </p><img class="img float-left img" src="images/article/article-image2.jpg" alt="ЖК 'На Сенной'"/>
+          <p>Для оценки фактической ситуации с почвой на месте планируемого строительства в апреле 2017 года были проведены инженерно-геологические изыскания Полтавским филиалом Украинского государственного главного научно-исследовательского и производственного института инженерно-технических и экологических изысканий (ПФ ДП «УКРНДІІНТВ») с бурением и изъятием образцов. По результатам были определены геологические условия на строительном участке.</p>
+          <ol>
+            <li>Данные исследования стали основой для проекта фундаментов разработанного главным архитектором проекта Зайцем С.П., который соответствует всем строительным нормам и стандартам.</li>
+            <li>Строительство фундамента было поручено компании «Фундаментспецбуд» основанной в 1990 году. Начиная с этого времени</li>
+          </ol>
+          <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.</p><img class="img float-right img" src="images/article/article-image3.jpg" alt="ЖК 'На Сенной'"/>
+          <ul>
+            <li>Сначала <strong>«Фундаментспецбуд»</strong> провел статические испытания почвы несколькими железобетонными сваями в разных местах строительного участка, которые подтвердили правильность расчетов и выполнил весь проект в полном объеме без отклонений.</li>
+            <li>Работая более 20-лет на строительном рынке, компания сформировала самодостаточную производственно техническую базу и накопила широкий производственный опыт. <strong>«Фундаментспецбуд»</strong> выполнил более 1000 проектов на территории Украины и за ее пределами.</li>
+          </ul>
+          <p>Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.</p>
+          <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.                  </p>
+          <p>Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.</p>
+          <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.</p>
         </div>
       </div>
     </section>
@@ -178,7 +187,8 @@
       <div class="container">
         <div class="grid">
           <div class="footer-address">
-            <h5 class="footer-address__title">Наши офисы</h5><a class="footer-link" href="#">г.Полтава, ул. А.Кукоби, 12</a><a class="footer-link" href="#">г.Миргород, ул.Победы,10, оф.1</a><a class="footer-link" href="#">Время работы: 9:00 – 18:00</a>
+            <h5 class="footer-address__title">Наши офисы</h5><a class="footer-link" href="https://goo.gl/maps/uvTuZejuJ91FQi488">г.Полтава, ул. А.Кукоби, 12</a><a class="footer-link" href="https://goo.gl/maps/A4DGXzHAsAgAp9nc7">г.Миргород, ул.Победы,10, оф.1</a>
+            <p>Время работы: 9:00 – 18:00</p>
           </div>
           <div class="footer-logo"><a class="link" href="#"> 
               <svg>
@@ -223,7 +233,7 @@
                   </svg>
                 </div></a></div>
           </div>
-          <p class="footer-copyright">© 2020. www.angro.com.ua</p>
+          <p class="footer-copyright">© 2020. <a class="footer-link" href="www.angro.com.ua">www.angro.com.ua</a></p>
         </div>
       </div>
     </footer>
@@ -234,29 +244,43 @@
           <div class="date">01.04.2020 г.</div>
           <div class="information__headline">Стоимость 1 кв.м в ЖК Остров с 01.04.2020</div>
           <div class="text">Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года</div>
-          <div class="price">
-            <p class="price__head">Вид квартиры</p>
-            <p class="price__head">Этаж </p>
-            <p class="price__head">Стоимость 1 кв.м</p>
-            <p class="price__item">Однокомнатная</p>
-            <p class="price__item">2,7,8</p>
-            <p class="price__item">11500,00 грн</p>
-            <p class="price__item">Двухкомнатная</p>
-            <p class="price__item">2,7,8</p>
-            <p class="price__item">11500,00 грн</p>
-            <p class="price__item">Однокомнатная</p>
-            <p class="price__item">3-6</p>
-            <p class="price__item">12000,00 грн</p>
-            <p class="price__item">Двухкомнатная</p>
-            <p class="price__item">3-6</p>
-            <p class="price__item">12000,00 грн</p>
-            <p class="price__item">Трехкомнатная</p>
-            <p class="price__item">9-9+</p>
-            <p class="price__item">10000,00 грн</p>
-            <p class="price__item">Четырехкомнатная</p>
-            <p class="price__item">9-9+</p>
-            <p class="price__item">10000,00 грн</p>
-          </div>
+          <table class="price">
+            <tr>
+              <th>Вид квартиры</th>
+              <th>Этаж </th>
+              <th>Стоимость 1 кв.м</th>
+            </tr>
+            <tr>
+              <td>Однокомнатная</td>
+              <td>2,7,8</td>
+              <td>11500,00 грн</td>
+            </tr>
+            <tr>
+              <td>Двухкомнатная</td>
+              <td>2,7,8</td>
+              <td>11500,00 грн</td>
+            </tr>
+            <tr>
+              <td>Однокомнатная</td>
+              <td>3-6</td>
+              <td>12000,00 грн</td>
+            </tr>
+            <tr>
+              <td>Двухкомнатная</td>
+              <td>3-6</td>
+              <td>12000,00 грн</td>
+            </tr>
+            <tr>
+              <td>Трехкомнатная</td>
+              <td>9-9+</td>
+              <td>10000,00 грн</td>
+            </tr>
+            <tr>
+              <td>Четырехкомнатная</td>
+              <td>9-9+</td>
+              <td>10000,00 грн</td>
+            </tr>
+          </table>
         </div>
         <div class="photo"><img class="img" src="images/objects/object_img4.jpg" alt="ЖК 'На Сенной'"/></div>
         <div class="object-modal__btn"><a class="arrow-btn arrow-btn--left" href="#">
