form validation fix;

--- a/app/gallery.html
+++ b/app/gallery.html
@@ -211,7 +211,7 @@
             <form class="footer-newsletter__form" action="">
               <h5 class="footer-newsletter__headline">Будьте в курсе спецпредложений   </h5>
               <label class="footer-newsletter__title" for="newsletter">Ваш e-mail</label>
-              <input class="footer-newsletter__field" id="newsletter" type="text"/>
+              <input class="footer-newsletter__field" id="newsletter" type="email"/>
               <button class="btn footer-newsletter__btn" type="submit">Хочу быть в курсе!</button>
             </form>
             <!--FORM END          -->
