--- a/app/arcticle.html
+++ b/app/arcticle.html
@@ -106,13 +106,13 @@
             </svg></a>
           <!--MOBILE LOGO END-->
           <h2 class="title">Статья</h2>
-          <!--h3.headline Важная информация со статьями и новостями от angro--><a class="arrow-btn arrow-btn--left" href="#">
+          <!--h3.headline Важная информация со статьями и новостями от angro--><a class="arrow-btn arrow-btn--left" href="blog.html">
             <div class="arrow-btn__icon">
               <svg class="icon">
                 <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
               </svg>
             </div>
-            <p class="arrow-btn__text">Объекты</p></a>
+            <p class="arrow-btn__text">Блог</p></a>
         </div>
       </div>
     </header>
