--- a/app/gallery-opened.html
+++ b/app/gallery-opened.html
@@ -113,7 +113,7 @@
                 <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
               </svg>
             </div>
-            <p class="arrow-btn__text">Объекты</p></a>
+            <p class="arrow-btn__text">Галерея</p></a>
         </div>
       </div>
     </header>
