--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
         <div class="sidebar-menu">
           <div class="sidebar-menu__triger">Меню</div>
         </div>
-        <div class="sidebar-icons"><a class="sidebar-icons__item" href="apartments.html">
+        <div class="sidebar-icons"><a class="sidebar-icons__item" href="#">
             <svg class="sidebar-icons__icon">
               <use xlink:href="images/main-page_icons-sprite.svg#apartament"></use>
             </svg></a><a class="sidebar-icons__item" href="tel:+380509915880">
@@ -647,6 +647,7 @@
         <div class="modal-video__close"></div>
       </div>
     </div>
+    <!--policy SATRT-->
     <div class="policy">
       <div class="policy__content">
         <div class="container">
@@ -707,7 +708,8 @@
           </div>
         </div>
       </div>
-    </div><!-- modal end-->                  
+    </div>
+    <!--policy END--><!-- modal end-->                  
 <!--build:js js/main.min.js -->
     <script src="js/libs/jquery.min.js"></script>
     <script src="js/libs/jquery-ui.js"></script>
