gallery pages fix; blog pages fix;

--- a/app/gallery.html
+++ b/app/gallery.html
@@ -123,14 +123,12 @@
             <p class="logo__text">жилой комплекс</p>
             <h2 class="logo__title">На Сенной</h2>
             <h4 class="logo__headline">Полтава ул. Сенная, 19</h4><a class="link" href="gallery-opened.html">Смотреть фото </a>
-          </div>
-          <div class="picture"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
+          </div><a class="picture" href="#"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
             <div class="picture__icon-wrap">
               <svg class="icon">
                 <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
               </svg>
-            </div>
-          </div>
+            </div></a>
         </div>
         <!-- OBJECT END-->
         <!-- OBJECT START-->
@@ -142,14 +140,12 @@
             <p class="logo__text">жилой комплекс</p>
             <h2 class="logo__title">Остров</h2>
             <h4 class="logo__headline">Миргород ул. Гоголя, 77</h4><a class="link" href="gallery-opened.html">Смотреть фото </a>
-          </div>
-          <div class="picture"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
+          </div><a class="picture" href="#"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
             <div class="picture__icon-wrap">
               <svg class="icon">
                 <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
               </svg>
-            </div>
-          </div>
+            </div></a>
         </div>
         <!-- OBJECT END-->
         <!-- OBJECT START-->
@@ -180,18 +176,17 @@
             <p class="logo__text">жилой комплекс</p>
             <h2 class="logo__title">Победы</h2>
             <h4 class="logo__headline">Миргород ул. Победы, 10</h4><a class="link" href="gallery-opened.html">Смотреть фото </a>
-          </div>
-          <div class="picture"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
+          </div><a class="picture" href="#"><img src="images/objects/object_img1.jpg" alt="ЖК 'На Сенной'"/>
             <div class="picture__icon-wrap">
               <svg class="icon">
                 <use xlink:href="images/main-page_icons-sprite.svg#eye"></use>
               </svg>
-            </div>
-          </div>
+            </div></a>
         </div>
         <!-- OBJECT END-->
       </div>
     </section>
+    <div class="container pagination"><a class="prev page-numbers" href="#">←Ранее</a><a class="page-numbers" href="#">1</a><span class="page-numbers current" aria-current="page">2</span><a class="page-numbers" href="#">3</a><a class="page-numbers" href="#">4</a><span class="page-numbers dots">…</span><a class="page-numbers" href="#">6</a><a class="next page-numbers" href="#">Далее→</a></div>
     <!--CONTENT END-->
     <!--FOOTER START-->
     <footer class="footer">
