--- a/app/arcticle.html
+++ b/app/arcticle.html
@@ -171,8 +171,8 @@
           </ol>
           <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.</p><img class="img float-right img" src="images/article/article-image3.jpg" alt="ЖК 'На Сенной'"/>
           <ul>
-            <li>Сначала <strong>«Фундаментспецбуд»</strong> провел статические испытания почвы несколькими железобетонными сваями в разных местах строительного участка, которые подтвердили правильность расчетов и выполнил весь проект в полном объеме без отклонений.</li>
-            <li>Работая более 20-лет на строительном рынке, компания сформировала самодостаточную производственно техническую базу и накопила широкий производственный опыт. <strong>«Фундаментспецбуд»</strong> выполнил более 1000 проектов на территории Украины и за ее пределами.</li>
+            <li>Сначала <a href="#" >«Фундаментспецбуд»</a> провел статические испытания почвы несколькими железобетонными сваями в разных местах строительного участка, которые подтвердили правильность расчетов и выполнил весь проект в полном объеме без отклонений.</li>
+            <li>Работая более 20-лет на строительном рынке, компания сформировала самодостаточную производственно техническую базу и накопила широкий производственный опыт. <a href="#" >«Фундаментспецбуд»</a> выполнил более 1000 проектов на территории Украины и за ее пределами.</li>
           </ul>
           <p>Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.</p>
           <p>С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.                  </p>
